--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -14,12 +14,13 @@
         <p class="navbar-brand">DAILY JOURNAL</p>
       </div>
         <ul class="nav navbar-nav navbar-right">
-          <li id="home"><a href="/home">HOME</a></li>
+          <% if (name!='Not Anyone'){%>
+              <li id="home"><a href="/profile/<%=penName%>">HOME</a></li>
+            <%}%>
           <li id="about"><a href="/about">ABOUT US</a></li>
           <li id="contact"><a href="/contact">CONTACT US</a></li>
-          <li id="compose"><a href="/compose">CREATE</a></li>
+          <li id="compose"><a href="/compose/">CREATE</a></li>
           <li id="community"><a href="/community">COMMUNITY</a></li>
-          <li id="logout"><a href="/users/logout">LOGOUT</a></li>
         </ul>
     </div>
   </nav>
