--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -1,23 +1,96 @@
-html {
-  min-height: 100%;
-  position: relative;
+* {
+	box-sizing: border-box;
 }
 
-.container-fluid {
+body{
+  background-color: #eae7dc;
+  height:90vh;
+}
+
+.navbar-brand a{
+  color:rgb(112, 111, 111);
+  text-decoration: none;
+}
+.navbar-brand a:hover{
+  color:black;
+}
+
+.homey{
+  background: #eae7dc;
+}
+
+/*.container-fluid {
     padding-top: 70px;
     padding-bottom: 70px;
 }
+*/
+.add{
+  /*padding-left: 50px;*/
+  justify-content: center;
+  align-items: center;
+}
+.jumb{
+  margin: 0 80px 20px 80px;
+  background-color: #77b0b1;
+  justify-content: center;
+  align-items: center;
+  box-shadow: 13px 13px 20px #317274;
+  z-index:0;
+
+}
+
+.jumb img{
+  width:100%;
+}
+.indcont{
+  margin-top: -350px;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+  z-index:1;
+}
+.indcont h1{
+  color:whitesmoke;
+  font-weight:10px;
+  letter-spacing:20px;
+}
+.indcont p{
+  color:#ddd;
+  line-height:20px;
+}
+
+.cont{
+  padding: 10px 0 15px 15px;
+}
 .navbar {
-    padding-top: 15px;
-    padding-bottom: 15px;
+    background: #eae7dc;
+    padding: 15px 40px 25px 0px;
     border: 0;
     border-radius: 0;
-    margin-bottom: 0;
+    margin:0;
     font-size: 12px;
     letter-spacing: 5px;
 }
+.nav a.btn{
+  background: transparent;
+}
+
+.nav a.btn:hover{
+  background: #376e6f;
+}
+.btn{
+  background: #708686;
+}
+
+.btn:hover{
+  background: #1e4849;
+}
+
+.nav-link{
+  padding: 0px 50px;
+}
 .navbar-nav  li a:hover {
-    color: #1abc9c !important;
+    color: #2e151b !important;
 }
 
 .footer-padding {
@@ -25,7 +98,7 @@ html {
 }
 
 .footer {
-	position: absolute;
+	position: relative;
 	text-align: center;
 	bottom: 0;
 	width: 100%;
