--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,8 +1,78 @@
 <%- include("partials/header1"); -%>
-    <h1>BlogsArena</h1>
-    <p> <%= title %> </p>
 
-    <a href="/home">Sign in</a>
+<div class="cont">
+	<nav class="navbar navbar-default">
+	  <div class="cont">
+		<div class="navbar-header">
+		  <p class="navbar-brand"><a href="/">B L O G B O W E R</a></p>
+		</div>
+		  <ul class="nav navbar-nav navbar-right">
+            <li id="about" class="nav-item"><a class="nav-link" href="/community">COMMUNITY</a></li>
+			<li id="about" class="nav-item"><a  class="nav-link" href="/about">GET INSPIRED</a></li>
+			<li id="contact" class="nav-item"><a class="nav-link" href="/contact">FOLLOW US</a></li>
+			<li id="compose" class="nav-item"><a class="nav-link" href="/community"></a></li>
+			<li id="compose" class="nav-item"><a class="btn btn-primary nav-link" href="/users/login">Start Your Journey</a></li>
+		  </ul>
+	  </div>
+    </nav>
+    
+
+</div>
 
 
-<%- include("partials/footer"); -%>
+<!--<%- include("partials/footer1"); -%> -->
+
+<link rel="stylesheet" href="/css/home.css">
+</head>
+
+
+
+<body>
+    <div class="homey">
+        <div id="wrapper">
+
+            <!-- Sidebar Nav-->
+            <div id="sidebar-wrapper">
+                <ul class="sidebar-nav">
+                    <li class="sidebar-nav"><a href="/compose" class="pub-btn btn"> Create A New Blog</a> </li>
+                    <li class="sidebar-nav"><a href="/profile/<%=penName%>"> Dashboard</a> </li>
+                    <li class="sidebar-nav"><a href="/community"> Community</a> </li>
+                    <li class="sidebar-nav"><a href="#">History</a> </li>
+                    <li class="sidebar-nav"><a href="#">Follow US</a> </li>
+                </ul>
+
+            </div>
+
+            <!--main page content-->
+
+
+            <div id="page-content-wrapper">
+
+
+                <!--Content-->
+                <div class="container-fluid">
+                    <div class="row">
+                        <div class="col-lg-12">
+                            <div class="add container">
+                                <div class="jumb">
+                                    <img src="/images/carousel2.jpeg" alt="Classic">
+                                </div>
+                            </div>
+                            
+                            <div class="indcont">
+                                <h1><strong>B L O G B O W E R</strong></h1>
+                                <p> <%= title %> </p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+
+
+            <%- include("partials/sidebar"); -%>
+        </div>
+    </div>
+
+    <!-- Menu Toggle JS-->
+    <script src="/js/sidebar.js"></script>
+    <!--<%- include("partials/footer1"); -%> -->
