--- a/views/partials/footer1.ejs
+++ b/views/partials/footer1.ejs
@@ -3,6 +3,7 @@
     <p>Created by <%= name %></p>
   </div>
 </div>
-<script src="/js/log.js"></script>
+<script src="https://use.fontawesome.com/d7ae17c793.js"></script>
+
 </body>
 </html>
