--- a/views/post.ejs
+++ b/views/post.ejs
@@ -1,6 +1,80 @@
-<%- include("partials/header"); -%>
+<%- include("partials/header1"); -%>
 
-  <h1><%=title%></h1>
-  <p><%=body%></p>
+<link rel="stylesheet" href="/css/home.css">
+</head>
 
-<%- include("partials/footer"); -%>
+
+
+<body>
+  <div class="homey">
+    <div id="wrapper">
+
+      <!-- Sidebar Nav-->
+      <div id="sidebar-wrapper">
+        <ul class="sidebar-nav">
+          <% if (name!=null){%>
+          <li class="sidebar-nav"><a href="/compose" class="pub-btn btn"> Create A New Blog</a> </li>
+          <li class="sidebar-nav"><a href="/profile/<%=penName%>"> Dashboard</a> </li>
+          <%} else {%>
+          <li class="sidebar-nav"><a href="/users/login" class="pub-btn btn"> Create A New Blog</a> </li>
+          <li class="sidebar-nav"><a href="/users/login"> Dashboard</a> </li>
+          <%}%>
+          <li class="sidebar-nav"><a href="/community"> Community</a> </li>
+          <li class="sidebar-nav"><a href="#">History</a> </li>
+          <li class="sidebar-nav"><a href="#">Follow US</a> </li>
+        </ul>
+
+      </div>
+
+      <!--main page content-->
+
+
+      <div id="page-content-wrapper">
+
+        <!-- NavBar -->
+        <div class="cont">
+          <nav class="navbar navbar-default">
+            <div class="cont">
+              <div class="navbar-header">
+                <p class="navbar-brand"><a href="#" id="menu-toggle"><i class="fa fa-fw fa-align-justify"></i></a></p>
+                <p class="navbar-brand"><a href="/">B L O G B O W E R</a></p>
+              </div>
+              <ul class="nav navbar-nav navbar-right">
+                <% if (name!=null){%>
+                <li id="home" class="nav-item"><a class="nav-link" href="/profile/<%=penName%>">HOME</a></li>
+                <%}%>
+                <li id="about" class="nav-item"><a class="nav-link" href="/about">ABOUT US</a></li>
+                <li id="contact" class="nav-item"><a class="nav-link" href="/contact">CONTACT US</a></li>
+                <li id="compose" class="nav-item"><a class="nav-link" href="/compose">CREATE</a></li>
+                <li class="nav-item"><a id="menu-toggle-rt" class="nav-link" href="#"><i
+                      class="fa fa-fw fa-user"></i></a></li>
+              </ul>
+            </div>
+          </nav>
+        </div>
+
+
+        <!--Content-->
+        <div class="container-fluid">
+          <div class="row">
+            <div class="col-lg-12">
+              <h1><%=title%></h1>
+              <p><%=body%></p>
+              <% if (Flag){%>
+                <a href="/edit/<%= _id %>">Edit Blog</a>
+                <a href="/delete/<%= _id %>">Delete Blog</a>
+              <%}%>
+            </div>
+          </div>
+        </div>
+      </div>
+
+
+      <%- include("partials/sidebar"); -%>
+    </div>
+  </div>
+
+  <!-- Menu Toggle JS-->
+  <script src="/js/sidebar.js"></script>
+  <!--<%- include("partials/footer1"); -%> -->
+
