--- a/views/community.ejs
+++ b/views/community.ejs
@@ -102,7 +102,7 @@
                 <a href="/profile/<%=blog.penName%>"><%=blog.penName%></a>
                 <h5>Last edited <%=blog._id.getTimestamp().toString().substring(0,3)%>, <%=blog._id.getTimestamp().toString().substring(4,10)%></h5>
                 <% if ((new Date().toString().substring(0,16))==blog._id.getTimestamp().toString().substring(0,16)){%>
-                   <h5><%=blog._id.getTimestamp().toString().substring(16,21)%></h5>
+                   <h5><%=blog._id.getTimestamp().toString().substring(16,21)%> GMT</h5>
                 <%}%>
                 <p class="blogg1">
                     <%=blog.body.substring(0, 100) + " ..."%>
