--- a/views/login.ejs
+++ b/views/login.ejs
@@ -7,7 +7,7 @@
 
 
 	      <!-- NavBar -->
-<div class="cont">
+<!-- <div class="cont"> -->
 	<!-- <nav class="navbar navbar-default">
 	  <div class="cont">
 		<div class="navbar-header">
@@ -22,7 +22,7 @@
 		  </ul>
 	  </div>
 	</nav> -->
-	</div>
+	<!-- </div> -->
 
 
 	<div class="logey">
@@ -77,6 +77,7 @@
 		</div>
 	</div>
 </div>
+
 </div>
 
 <script src="/js/log.js"></script>
