--- a/public/css/loginstyle.css
+++ b/public/css/loginstyle.css
@@ -102,8 +102,7 @@ input {
   	box-shadow: 0 14px 28px rgba(0,0,0,0.25), 
 			0 10px 10px rgba(0,0,0,0.22);
 	position: relative;
-	overflow-x: hidden;
-	overflow-y: scroll;
+	overflow: hidden;
 	width: 868px;
 	max-width: 150%;
 	min-height: 600px;
