--- a/public/css/edit.css
+++ b/public/css/edit.css
@@ -23,7 +23,21 @@
 	overflow: hidden;
 	width: 868px;
 	max-width: 150%;
-    min-height: 400px;
+	min-height: 600px;
+	padding-top: 20px;
+}
+
+.wrap1{
+    background: linear-gradient(to right, #2f4454,#9b3a33);
+	border-radius: 30px;
+  	box-shadow: 0 14px 28px rgba(0,0,0,0.25), 
+			0 10px 10px rgba(0,0,0,0.22);
+	position: relative;
+	overflow: hidden;
+	width: 868px;
+	max-width: 150%;
+	min-height: 400px;
+	padding-top: 20px;
 }
 
 form{
@@ -74,7 +88,12 @@ button:focus {
 
 
 h1{
-    padding-left: 40px;;
+	text-align: center;
     color:rgba(255, 255, 255, 0.4);
     font-weight:bold;
+}
+
+h2{
+	text-align: center;
+    color:rgba(255, 255, 255, 0.8);
 }
