--- a/views/editProfile.ejs
+++ b/views/editProfile.ejs
@@ -6,7 +6,7 @@
 <link rel="stylesheet" href="/css/edit.css">
 <body>
 <div class="prof">
-<div class="wrap">
+<div class="wrap1">
 <h1>Edit Profile</h1>
 <form action="/users/editProfile" method="post">
     <input type="text" name="name" placeholder="Name: <%= name %>" />
@@ -14,6 +14,7 @@
     <input type="text" name="gender" placeholder="Gender: <%= gender %>" />
     <!-- <input type="password" name="newPassword" placeholder="Enter New Password" />
     <input type="password" name="confirmNewPassword" placeholder="Confirm Password" /> -->
+    <br>
     <button>Apply Changes</button>
 </form>
 </div>
