--- a/public/css/edit.css
+++ b/public/css/edit.css
@@ -23,7 +23,7 @@
 	overflow: hidden;
 	width: 868px;
 	max-width: 150%;
-	min-height: 600px;
+	min-height: 800px;
 	padding-top: 20px;
 }
 
@@ -38,6 +38,7 @@
 	max-width: 150%;
 	min-height: 400px;
 	padding-top: 20px;
+	padding-bottom: 20px;
 }
 
 form{
