--- a/views/setupProfile.ejs
+++ b/views/setupProfile.ejs
@@ -1,4 +1,7 @@
-<link rel="stylesheet" href="/css/edit.css">
+<head>
+    <link rel="stylesheet" href="/css/edit.css">
+    <link rel="icon" href="/images/favicon.png">
+</head>
 
 <body>
 
