add display blogs partials

--- a/views/partials/sidebar.ejs
+++ b/views/partials/sidebar.ejs
@@ -6,12 +6,12 @@
             <li class="sidebar-nav-rt"><%=penName%></li>
             <li class="sidebar-nav-rt"><%=email%></li>
             <li class="sidebar-nav-rt">User AGE</li>
-            <li class="sidebar-nav-rt btn pub-btn"><a href="/users/editProfile"> EDIT Profile</a> </li>
-            <li class="sidebar-nav-rt btn pub-btn"><a href="/users/logout"> sign out</a> </li>
-            <li class="sidebar-nav-rt"><a href="/"> v 1.0.3</a></li>
+            <li class="sidebar-nav-rt pub-btn"><a href="/users/editProfile"> EDIT Profile</a> </li>
+            <li class="sidebar-nav-rt pub-btn"><a href="/users/logout"> sign out</a> </li>
+            <li class="sidebar-nav-rt version"> v 1.0.3</li>
         <%} else {%>
-                <li class="sidebar-nav-rt btn pub-btn"><a href="/users/login"> sign in</a> </li>
-                <li class="sidebar-nav-rt"><a href="/"> v 1.0.3</a></li>
+                <li class="sidebar-nav-rt pub-btn"><a href="/users/login"> sign in</a> </li>
+                <li class="sidebar-nav-rt version"> v 1.0.3</li>
         <%  } %>
         
     </ul>
