--- a/public/css/home.css
+++ b/public/css/home.css
@@ -90,7 +90,7 @@ body{
     flex-direction: row;
     flex:right;
     right:0;
-    position: absolute;
+    position: fixed;
     z-index:1;
     width:0;
     height:1080px;
@@ -133,6 +133,11 @@ body{
     color:#ddd;
 }
 
+.version {
+    position: fixed;
+    bottom: 5px;
+}
+
 /* .sidebar-nav-rt li a:hover{
     background:#757474;
     transition: all 0.6s ease-out;
@@ -148,7 +153,7 @@ body{
 
 .blogss{
     padding: 60px;
-    background: #eae7dc;;
+    background: #eae7dc;
 }
 
 .blog1{
@@ -158,8 +163,42 @@ body{
     -13px -13px 20px #f7f4ec;
 }
 
+.blog1 p, .blog1 a {
+    margin-left: 1%;
+}
+
+.blog1 h1 {
+    display: inline-block;
+}
+
+#blogger {
+    text-decoration: none;
+    font-size: medium;
+}
+
+.date {
+    font-size: small;
+    position: absolute;
+    right: 7%;
+}
+
+#title-space {
+    width: 25%;
+}
+
+#blog-title {
+    margin-left: 0.2%;
+    text-decoration: none;
+    color: #424242;
+}
+
+#blog-title :hover {
+    color: grey;
+}
+
 .blogg1{
     color: #424242;
+    font-size: medium;
 }
 
 .blog1 h1{
