--- a/views/profile.ejs
+++ b/views/profile.ejs
@@ -64,30 +64,8 @@
                                 <h1>Home</h1>
                                 <h2> <%= title %> </h2>
 
+                                <%- include("partials/dispblogs"); -%>
 
-                                <%  blogs.forEach(function(blog){ %>
-
-                                <div class="blog1">
-
-                                    <h1><%=blog.title%></h1>
-                                    <p class="blogg1">
-                                        <h5>Last edited <%=blog._id.getTimestamp().toString().substring(0,3)%>,
-                                            <%=blog._id.getTimestamp().toString().substring(4,10)%></h5>
-                                        <% if ((new Date().toString().substring(0,16))==blog._id.getTimestamp().toString().substring(0,16)){%>
-                                        <h5><%=blog._id.getTimestamp().toString().substring(16,21)%> GMT</h5>
-                                        <%}%>
-                                        <%=blog.body.substring(0, 100) + " ..."%>
-                                        <a href="/blogs/<%=blog.title%>">Read More</a>
-                                    </p>
-                                </div>
-
-                                <br>
-                                <br>
-
-
-                                <% }) %>
-
-                                </p>
                             </div>
                         </div>
                     </div>
