'read full blog' link removed

--- a/views/partials/dispblogs.ejs
+++ b/views/partials/dispblogs.ejs
@@ -19,7 +19,7 @@
                 <%=blog.body%>
             <%} else {%>
                 <%=blog.body.substring(0, 400) + " ..."%>
-                <a href="/blogs/<%=blog.title%>">read full blog</a>
+                <!-- <a href="/blogs/<%=blog.title%>">read full blog</a> -->
             <%}%>
         </p>
     </div>
