--- a/views/editProfile.ejs
+++ b/views/editProfile.ejs
@@ -14,7 +14,7 @@
     <input type="text" name="gender" placeholder="Gender: <%= gender %>" />
     <!-- <input type="password" name="newPassword" placeholder="Enter New Password" />
     <input type="password" name="confirmNewPassword" placeholder="Confirm Password" /> -->
-    <input type="file" name="buffer" placeholder="Upload avatar" />
+    <input type="file" name="buffer"/>
     <br>
     <button>Apply Changes</button>
 </form>
