--- a/public/css/home.css
+++ b/public/css/home.css
@@ -1,5 +1,5 @@
 body{
-	background: #eae7dc;;
+	background: #eae7dc;
 }
 .logey {
 	background: #eae7dc;;
@@ -210,4 +210,10 @@ body{
     font-weight:bold;
     letter-spacing: 10px;
     padding:10px;
+}
+
+#postbg {
+    background-color: #eae7dc;
+    border-color: #eae7dc;
+    resize: none;
 }
