--- a/views/partials/footer1.ejs
+++ b/views/partials/footer1.ejs
@@ -1,9 +1,17 @@
-<div class="footer-padding"></div>
+
   <div class="footer">
-    <p>Created by <%= name %></p>
+    <div class="footer-text">
+    <p>MADE BY BLOGBOWER</p>
+    </div>
+  <div class="footer-icons">
+    <a href="https://www.facebook.com/abhik.sen.378" class="soc"><i class="fa fa-fw fa-facebook"></i></a>
+    <a href="mailto: blogbower@gmail.com" class="soc"><i class="fa fa-fw fa-google"></i></a>
+    <a href="https://www.instagram.com/abheet_pandey/?igshid=1pvsxyavxa39y" class="soc"><i class="fa fa-fw fa-instagram"></i></a>
   </div>
-</div>
+  </div>
 <script src="https://use.fontawesome.com/d7ae17c793.js"></script>
+<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
 
 </body>
+
 </html>
