--- a/public/css/home.css
+++ b/public/css/home.css
@@ -15,7 +15,7 @@ body{
 
 #sidebar-wrapper{
     z-index:1;
-    position: absolute;
+    position: fixed;
     width:0;
     height:1080px;
     overflow-y:hidden;
