--- a/views/404.ejs
+++ b/views/404.ejs
@@ -3,4 +3,4 @@
     <h1>ERROR 404</h1>
     <h2><%=errorMessage%></h2>
 
-<!-- <%- include("partials/footer"); -%> -->
+<%- include("partials/footer1"); -%>
