--- a/views/compose.ejs
+++ b/views/compose.ejs
@@ -31,12 +31,12 @@
           <nav class="navbar navbar-default">
             <div class="cont">
               <div class="navbar-header">
-                <p class="navbar-brand"><a href="#" id="menu-toggle"><i class="fa fa-fw fa-align-justify"></i></a></p>
+                <p class="navbar-brand"><button id="menu-toggle"><i class="fas fa-hamburger"></i></button></p>
                 <p class="navbar-brand"><a href="/">B L O G B O W E R</a></p>
               </div>
               <ul class="nav navbar-nav navbar-right">
                 <li id="home" class="nav-item"><a class="nav-link" href="/profile/<%=penName%>">HOME</a></li>
-                <li id="about" class="nav-item"><a class="nav-link" href="/about">ABOUT US</a></li>
+                <li id="about" class="nav-item"><a class="nav-link" href="/#follow">ABOUT US</a></li>
                 <li id="contact" class="nav-item"><a class="nav-link" href="/contact">CONTACT US</a></li>
                 <!-- <li id="compose" class="nav-item"><a class="nav-link" href="/compose">CREATE</a></li> -->
                 <li class="nav-item"><a id="menu-toggle-rt" class="nav-link" href="#"><i
@@ -73,6 +73,6 @@
 <p>Warning: Please do not leave this page or refresh, before publishing!</p>
 <!-- Menu Toggle JS-->
 <script src="/js/sidebar.js"></script>
-<!--<%- include("partials/footer1"); -%> -->
+<%- include("partials/footer1"); -%>
 
     
