--- a/views/index.ejs
+++ b/views/index.ejs
@@ -8,8 +8,8 @@
 		</div>
 		  <ul class="nav navbar-nav navbar-right">
             <li id="about" class="nav-item"><a class="nav-link" href="/community">COMMUNITY</a></li>
-			<li id="about" class="nav-item"><a  class="nav-link" href="/about">GET INSPIRED</a></li>
-			<li id="contact" class="nav-item"><a class="nav-link" href="/contact">FOLLOW US</a></li>
+			<li id="about" class="nav-item"><a  class="nav-link" href="#getinspired">GET INSPIRED</a></li>
+			<li id="contact" class="nav-item"><a class="nav-link" href="#follow">FOLLOW US</a></li>
 			<li id="compose" class="nav-item"><a class="nav-link" href="/community"></a></li>
 			<li id="compose" class="nav-item"><a class="btn btn-primary nav-link" href="/users/login">Start Your Journey</a></li>
 		  </ul>
@@ -19,8 +19,6 @@
 
 </div>
 
-
-<!--<%- include("partials/footer1"); -%> -->
 
 <link rel="stylesheet" href="/css/home.css">
 </head>
@@ -48,31 +46,146 @@
 
             <div id="page-content-wrapper">
 
+              <div class="wropper">
 
+                <div class="ind-cont">
                 <!--Content-->
-                <div class="container-fluid">
-                    <div class="row">
-                        <div class="col-lg-12">
-                            <div class="add container">
-                                <div class="jumb">
-                                    <img src="/images/carousel2.jpeg" alt="Classic">
-                                </div>
-                            </div>
-                            
-                            <div class="indcont">
-                                <h1><strong>B L O G B O W E R</strong></h1>
-                                <p> <%= title %> </p>
-                            </div>
+                <div id="gallery-carousel" class="carousel slide" data-ride="carousel">
+                    <!-- Indicators -->
+                    <ol class="carousel-indicators">
+                      <li data-target="#gallery-carousel" data-slide-to="0" class="active"></li>
+                      <li data-target="#gallery-carousel" data-slide-to="1"></li>
+                      <li data-target="#gallery-carousel" data-slide-to="2"></li>
+                    </ol>
+                  
+                    <!-- Wrapper for slides -->
+                    <div class="carousel-inner" role="listbox">
+                      <div class="item active">
+                        <img src="/images/carousel2.jpeg" alt="...">
+                        <div class="carousel-caption">
+                          <h1>B  L  O  G  B  O  W  E  R</h1>
                         </div>
+                      </div>
+                      <div class="item">
+                        <img src="/images/carousel3.jpeg" alt="bc">
+                        <div class="carousel-caption">
+                          <h2>Welcome To The Club of Writers</h2>
+                        </div>
+                      </div>
+                      <div class="item">
+                        <img src="/images/carousel1.jpeg" alt="bc">
+                        <div class="carousel-caption">
+                          <h2>Are you ready to get on this journey?</h2>
+                        </div>
+                      </div>
                     </div>
+                  
+                    <!-- Controls -->
+                    <a class="left carousel-control" href="#gallery-carousel" data-target="#gallery-carousel" role="button" data-slide="prev">
+                      <span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
+                      <span class="sr-only">Previous</span>
+                    </a>
+                    <a class="right carousel-control" href="#gallery-carousel" data-target="#gallery-carousel" role="button" data-slide="next">
+                      <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
+                      <span class="sr-only">Next</span>
+                    </a>
+                  </div>
                 </div>
-            </div>
+              </div>
 
 
             <%- include("partials/sidebar"); -%>
+        <h1 id="getinspired" style="text-align:center; padding-top:150px; font-weight: bold;">GET INSPIRED!</h1>
+<br>
+    <div class="container rtx">
+        <div class="row">
+            <div class="col-md-4">
+                <div id="img1">
+                    <h2>J.K. Rowling</h2>
+                    <p>"If you want to know what a man's like, take a good look at how he treats his inferiors, not his equals"</p>
+                </div>
+            </div>
+            <div class="col-md-4">
+                <div id="img2">
+                    <h2>William Wordsworth</h2>
+                    <p>"Come Forth into the light of things, Let Nature be your Teacher"</p>
+                </div>
+            </div>
+            <div class="col-md-4">
+                <div id="img3">
+                    <h2>George R.R. Martin</h2>
+                    <p>A reader lives a thousand lives before he dies. The man who never reads lives only one.</p>
+                </div>
+            </div>
         </div>
+        <div class="row">
+          <div class="col-md-4">
+              <div id="img4">
+                  <h2>Gillian Flynn</h2>
+                  <p>"Our kind of love can go into remission, but it's always waiting to return. Like the world's sweetest cancer”</p>
+              </div>
+          </div>
+          <div class="col-md-4">
+              <div id="img5">
+                  <h2>William Thackarey</h2>
+                  <p>All is Vanity, Nothing is Fair</p>
+              </div>
+          </div>
+          <div class="col-md-4">
+              <div id="img6">
+                  <h2>Sylvia Plath</h2>
+                  <p>
+                    “Perhaps some day I'll crawl back home, beaten, defeated. But not as long as I can make stories out of my heartbreak, beauty out of sorrow.”</p>
+              </div>
+          </div>
+      </div>
     </div>
+    <br>
 
+    <!--About Us-->
+<br>
+
+<h1 id="follow" style="text-align:center; font-weight: bold; letter-spacing: 10px; padding-top: 200px;;">ABOUT US</h1>
+    <div class="container gtx">
+      <div class="row">
+        <div class="ab col-md-4">
+          <h1>ABHIK SEN</h1>
+          <p>Student At BIT MESRA</p>
+          <div class="soci">
+            <a href="mailto: abhik333333@gmail.com" class="soc"><i class="fa fa-fw fa-google"></i></a>
+            <a href="https://www.facebook.com/abhik.sen.378" class="soc"><i class="fa fa-fw fa-facebook"></i></a>
+            <a href="https://www.instagram.com/abhikrn_03/" class="soc"><i class="fa fa-fw fa-instagram"></i></a>
+          </div>
+        </div>
+        <div class="ab col-md-4">
+          <h1>ARCHIT ANAND</h1>
+          <p>Student At IIT PATNA</p>
+          <div class="soci">
+            <a href="mailto: archit342000@gmail.com" class="soc"><i class="fa fa-fw fa-google"></i></a>
+            <a href="https://www.facebook.com/archit.anand.509" class="soc"><i class="fa fa-fw fa-facebook"></i></a>
+            <a href="https://www.instagram.com/archit0326/" class="soc"><i class="fa fa-fw fa-instagram"></i></a>
+          </div>
+        </div>
+        <div class="ab col-md-4">
+          <h1>ABHEET PANDEY</h1>
+          <p>Student At BIT MESRA</p>
+          <div class="soci">
+          <a href="mailto: pandeyabheet27@gmail.com" class="soc"><i class="fa fa-fw fa-google"></i></a>
+          <a href="https://www.facebook.com/abheet.pandey.1" class="soc"><i class="fa fa-fw fa-facebook"></i></a>
+          <a href="https://www.instagram.com/abheet_pandey/?igshid=1pvsxyavxa39y" class="soc"><i class="fa fa-fw fa-instagram"></i></a>
+          </div>
+        </div>
+      </div>
+    </div>
+</div>
+</div>
     <!-- Menu Toggle JS-->
     <script src="/js/sidebar.js"></script>
-    <!--<%- include("partials/footer1"); -%> -->
+
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
+
+</body>
+
+
+    <%- include("partials/footer1"); -%> 
