--- a/views/editProfile.ejs
+++ b/views/editProfile.ejs
@@ -8,7 +8,7 @@
 <div class="prof">
 <div class="wrap1">
 <h1>Edit Profile</h1>
-<form action="/users/editProfile" method="post" enctype="multipart/form-data">
+<form action="/<%=penName%>/editProfile" method="post" enctype="multipart/form-data">
     <input type="text" name="name" placeholder="Name: <%= name %>" />
     <input type="text" name="age" placeholder="Age: <%= age %>" />
     <input type="text" name="gender" placeholder="Gender: <%= gender %>" />
