--- a/views/partials/sidebar.ejs
+++ b/views/partials/sidebar.ejs
@@ -6,7 +6,7 @@
             <li class="sidebar-nav-rt"><%=penName%></li>
             <li class="sidebar-nav-rt"><%=email%></li>
             <li class="sidebar-nav-rt">User AGE</li>
-            <li class="sidebar-nav-rt pub-btn"><a href="/<%=penName%>/editProfile"> EDIT Profile</a> </li>
+            <li class="sidebar-nav-rt pub-btn"><a href="/users/<%=penName%>/editProfile"> EDIT Profile</a> </li>
             <li class="sidebar-nav-rt pub-btn"><a href="/users/logout"> sign out</a> </li>
             <li class="sidebar-nav-rt version"> v 1.0.3</li>
         <%} else {%>
